--- a/style.css
+++ b/style.css
@@ -1,15 +1,8 @@
-html,
-body {
-	margin: 0;
-	padding: 0;
-	height: auto;
-}
-
 :root {
 	/* fonts specs */
 	--fn: "Chakra Petch", sans-serif;
 	--fn-ttl-w: 600;
-	--fn-pr: 500;
+	--fn-pr-w: 500;
 	/* Colors specs*/
 	--bg-clr: #f4f7f5;
 	--pri-clr: #08090a;
@@ -18,7 +11,19 @@ body {
 	--fill-clr-2: #ffffff;
 }
 
+html,
+body {
+	height: 100%;
+}
+
+*,
 *::before,
 *::after {
 	box-sizing: border-box;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	font-style: inherit;
 }
