--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	gap: 1rem;
 }
 
 .title {
@@ -58,19 +59,47 @@ main {
 	font-weight: var(--fn-pr-w);
 }
 
-select {
-	font-family: var(--fn);
-	font-weight: var(--fn-pr-w);
-	font-size: 1rem;
-	width: 3rem;
-	border-radius: 4px;
+.cnt.left {
+	position: relative;
 }
 
-select:hover {
+.cnt.left input {
+	width: 5rem;
+	height: 2rem;
+	font-family: var(--fn);
+	font-weight: var(--fn-pr-w);
+	font-size: 24px;
+	border-radius: 4px;
+	border: none;
+	cursor: pointer;
+	outline: none;
+	box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+	text-align: center;
+}
+
+.dropdown .options {
+	display: none;
+	overflow: hidden;
+	font-size: 18px;
+	background: #fff;
+	box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+	border-radius: 4px;
+	text-align: center;
+}
+
+.dropdown .options.active {
+	display: block;
+}
+
+.dropdown .options div {
+	cursor: pointer;
+}
+
+.dropdown .options div:hover {
 	background-color: var(--sec-clr);
 }
 
-.fill {
+.cnt .fill {
 	width: 2rem;
 	height: 2rem;
 	border: 2px solid var(--pri-clr);
