--- a/style.css
+++ b/style.css
@@ -45,18 +45,20 @@ main {
 
 .cnt {
 	display: flex;
-	width: 22rem;
-}
-
-.cnt.left,
-.cnt.right {
-	gap: 12px;
-	flex: auto;
+	width: 34.5rem;
 }
 
 .ind {
 	font-size: 24px;
 	font-weight: var(--fn-pr-w);
+}
+
+.cnt.left,
+.cnt.right,
+.btn {
+	gap: 0.8rem;
+	flex-basis: 1;
+	margin: 0 1.2rem;
 }
 
 .cnt.left {
@@ -75,6 +77,7 @@ main {
 	outline: none;
 	box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
 	text-align: center;
+	border: 2px solid var(--pri-clr);
 }
 
 .dropdown .options {
@@ -107,9 +110,23 @@ main {
 }
 
 .fill.clr-1 {
+	box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
 	background-color: var(--fill-clr-1);
+	cursor: pointer;
 }
 
 .fill.clr-2 {
+	box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
 	background-color: var(--fill-clr-2);
+	cursor: pointer;
+}
+
+.btn {
+	background-color: #e53a00;
+	color: #f2f2f2;
+	border: 2px solid var(--pri-clr);
+	box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+	border-radius: 4px;
+	padding: 0 0.5rem;
+	height: 2rem;
 }
